; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/mac-capture/extr_mac-audio.c_enable_io.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/mac-capture/extr_mac-audio.c_enable_io.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.coreaudio_data = type { i32 }

@kAudioOutputUnitProperty_EnableIO = common dso_local global i32 0, align 4
@IO_TYPE_INPUT = common dso_local global i32 0, align 4
@SCOPE_INPUT = common dso_local global i32 0, align 4
@SCOPE_OUTPUT = common dso_local global i32 0, align 4
@BUS_INPUT = common dso_local global i32 0, align 4
@BUS_OUTPUT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.coreaudio_data*, i32, i32)* @enable_io to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @enable_io(%struct.coreaudio_data* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.coreaudio_data*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.coreaudio_data* %0, %struct.coreaudio_data** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load i32, i32* %6, align 4
  store i32 %8, i32* %7, align 4
  %9 = load %struct.coreaudio_data*, %struct.coreaudio_data** %4, align 8
  %10 = getelementptr inbounds %struct.coreaudio_data, %struct.coreaudio_data* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load i32, i32* @kAudioOutputUnitProperty_EnableIO, align 4
  %13 = load i32, i32* %5, align 4
  %14 = load i32, i32* @IO_TYPE_INPUT, align 4
  %15 = icmp eq i32 %13, %14
  br i1 %15, label %16, label %18

16:                                               ; preds = %3
  %17 = load i32, i32* @SCOPE_INPUT, align 4
  br label %20

18:                                               ; preds = %3
  %19 = load i32, i32* @SCOPE_OUTPUT, align 4
  br label %20

20:                                               ; preds = %18, %16
  %21 = phi i32 [ %17, %16 ], [ %19, %18 ]
  %22 = load i32, i32* %5, align 4
  %23 = load i32, i32* @IO_TYPE_INPUT, align 4
  %24 = icmp eq i32 %22, %23
  br i1 %24, label %25, label %27

25:                                               ; preds = %20
  %26 = load i32, i32* @BUS_INPUT, align 4
  br label %29

27:                                               ; preds = %20
  %28 = load i32, i32* @BUS_OUTPUT, align 4
  br label %29

29:                                               ; preds = %27, %25
  %30 = phi i32 [ %26, %25 ], [ %28, %27 ]
  %31 = call i32 @set_property(i32 %11, i32 %12, i32 %21, i32 %30, i32* %7, i32 4)
  ret i32 %31
}

declare dso_local i32 @set_property(i32, i32, i32, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
